[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Actors/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/Actors/Morphed.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Actors/Character.png" type="Texture" id=3]
[ext_resource path="res://src/Actors/Player/Staff.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/Actor.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Actors/HurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Actors/Player/Abilities.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Morphed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.01, 0.01 )

[node name="Player" instance=ExtResource( 5 )]
collision_layer = 2
script = ExtResource( 1 )
TILE_SIZE = 32
WALK_SPEED = 8
JUMP_FORCE = 18
GRAVITY = 32

[node name="MorphShape" type="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 16 )
shape = SubResource( 5 )

[node name="AnimatedSprite" parent="." index="2"]
frames = SubResource( 1 )

[node name="ProjectileSpawnPoint" type="Position2D" parent="AnimatedSprite" index="0"]
position = Vector2( 16, -8 )

[node name="Abilities" parent="." index="3" instance=ExtResource( 7 )]

[node name="Stats" parent="." index="4"]
current_hp = 99
max_hp = 99
current_mp = 99
max_mp = 99

[node name="HurtBox" parent="Hurtboxes" index="0"]
collision_layer = 4

[node name="MorphHitbox" parent="Hurtboxes" index="1" instance=ExtResource( 6 )]
position = Vector2( -25, 0 )
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtboxes/MorphHitbox" index="0"]
position = Vector2( 25, 16 )

[node name="iFrameTimer" parent="Hurtboxes/MorphHitbox" index="1"]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="." index="6"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="UnmorphDetector" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnmorphDetector" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 6 )

[node name="RoomDetector" type="Area2D" parent="." index="8"]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector" index="0"]
scale = Vector2( 0.01, 0.01 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="." index="9"]
one_shot = true

[node name="Staff" parent="." index="10" instance=ExtResource( 4 )]

[connection signal="body_entered" from="UnmorphDetector" to="." method="_on_UnmorphDetector_body_entered"]
[connection signal="body_exited" from="UnmorphDetector" to="." method="_on_UnmorphDetector_body_exited"]
[connection signal="area_entered" from="RoomDetector" to="." method="_on_RoomDetector_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Staff" to="." method="_on_Staff_animation_finished"]

[editable path="Hurtboxes/HurtBox"]
[editable path="Hurtboxes/MorphHitbox"]
